base/src/test/resources/failure/issue292.aya.txt
In file $FILE:9:15 ->

  7 |   | false
  8 | 
  9 | def u : Nat => true
                     ^--^
  
Error: Expected type: Nat
       Normalized: Nat
       Actual type: Bool
       Normalized: Bool
       They don't match, sorry
What are you doing?
